api: user groups crud.
