# swagger/v1/swagger.json
@@ -481,7 +481,7 @@
           "422": {
             "description": "Invalid request",
             "schema": {
-              "$ref": "#/definitions/error_422"
+              "$ref": "#/definitions/error_422_start_end_time"
             }
           }
         }
@@ -583,6 +583,224 @@
           },
           "406": {
             "description": "Unsupported accept header"
+          }
+        }
+      }
+    },
+    "/api/v1/user_groups": {
+      "post": {
+        "summary": "create user group",
+        "tags": [
+          "UserGroups"
+        ],
+        "security": [
+          {
+            "JWT": {
+            }
+          }
+        ],
+        "consumes": [
+          "application/vnd.api+json"
+        ],
+        "produces": [
+          "application/vnd.api+json"
+        ],
+        "parameters": [
+          {
+            "name": "user_group",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/user_group_post_params"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "User Group created",
+            "schema": {
+              "$ref": "#/definitions/user_group_post_params"
+            }
+          },
+          "422": {
+            "description": "Invalid request",
+            "schema": {
+              "$ref": "#/definitions/error_422"
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "get user groups",
+        "tags": [
+          "UserGroups"
+        ],
+        "security": [
+          {
+            "JWT": {
+            }
+          }
+        ],
+        "produces": [
+          "application/vnd.api+json"
+        ],
+        "parameters": [
+          {
+            "name": "page[size]",
+            "in": "query",
+            "type": "integer",
+            "required": false
+          },
+          {
+            "name": "page[number]",
+            "in": "query",
+            "type": "integer",
+            "required": false
+          },
+          {
+            "name": "filter[name]",
+            "in": "query",
+            "type": "string",
+            "required": false
+          },
+          {
+            "name": "filter[group_type_id]",
+            "in": "query",
+            "type": "integer",
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User Groups index",
+            "schema": {
+              "$ref": "#/definitions/user_groups_response"
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/user_groups/{id}": {
+      "delete": {
+        "summary": "destroy user group",
+        "tags": [
+          "UserGroups"
+        ],
+        "security": [
+          {
+            "JWT": {
+            }
+          }
+        ],
+        "produces": [
+          "application/vnd.api+json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "OK: No Content"
+          },
+          "404": {
+            "description": "Record not found",
+            "schema": {
+              "$ref": "#/definitions/error_404"
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "get user group",
+        "tags": [
+          "UserGroups"
+        ],
+        "security": [
+          {
+            "JWT": {
+            }
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "produces": [
+          "application/vnd.api+json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Showing tag type",
+            "schema": {
+              "$ref": "#/definitions/user_group_response"
+            }
+          },
+          "404": {
+            "description": "Record not found",
+            "schema": {
+              "$ref": "#/definitions/error_404"
+            }
+          },
+          "406": {
+            "description": "Unsupported accept header",
+            "schema": {
+              "$ref": "#/definitions/error_406"
+            }
+          }
+        }
+      },
+      "patch": {
+        "summary": "update user group",
+        "tags": [
+          "UserGroups"
+        ],
+        "security": [
+          {
+            "JWT": {
+            }
+          }
+        ],
+        "consumes": [
+          "application/vnd.api+json"
+        ],
+        "produces": [
+          "application/vnd.api+json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "user_group",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/user_group_patch_params"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK: User Group updated",
+            "schema": {
+              "$ref": "#/definitions/user_group_patch_params"
+            }
+          },
+          "422": {
+            "description": "Invalid request",
+            "schema": {
+              "$ref": "#/definitions/error_422"
+            }
           }
         }
       }
@@ -1546,6 +1764,143 @@
         }
       }
     },
+    "user_group_attributes": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "voluptas",
+          "x-nullable": false
+        },
+        "group_type_id": {
+          "type": "integer",
+          "example": 2,
+          "x-nullable": false
+        }
+      }
+    },
+    "user_groups_response": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "string",
+                "example": "1"
+              },
+              "type": {
+                "type": "string",
+                "example": "user_groups"
+              },
+              "link": {
+                "type": "object",
+                "properties": {
+                  "self": {
+                    "type": "string",
+                    "example": "https://job-plan-stats.herokuapp.com/api/v1/user_groups/1"
+                  }
+                }
+              },
+              "attributes": {
+                "$ref": "#/definitions/user_group_attributes"
+              }
+            }
+          }
+        },
+        "links": {
+          "type": "object",
+          "properties": {
+            "first": {
+              "type": "string",
+              "example": "https://job-plan-stats.herokuapp.com/api/v1/user_groups?page[number]=1&page[size]=5"
+            },
+            "prev": {
+              "type": "string",
+              "example": "https://job-plan-stats.herokuapp.com/api/v1/user_groups?page[number]=1&page[size]=5"
+            },
+            "next": {
+              "type": "string",
+              "example": "https://job-plan-stats.herokuapp.com/api/v1/user_groups?page[number]=2&page[size]=5"
+            },
+            "last": {
+              "type": "string",
+              "example": "https://job-plan-stats.herokuapp.com/api/v1/user_groups?page[number]=5&page[size]=5"
+            }
+          }
+        }
+      }
+    },
+    "user_group_response": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "example": "1"
+            },
+            "type": {
+              "type": "string",
+              "example": "user_groups"
+            },
+            "link": {
+              "type": "object",
+              "properties": {
+                "self": {
+                  "type": "string",
+                  "example": "https://job-plan-stats.herokuapp.com/api/v1/user_groups/1"
+                }
+              }
+            },
+            "attributes": {
+              "$ref": "#/definitions/user_group_attributes"
+            }
+          }
+        }
+      }
+    },
+    "user_group_post_params": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "object",
+          "properties": {
+            "type": {
+              "type": "string",
+              "example": "user_groups"
+            },
+            "attributes": {
+              "$ref": "#/definitions/user_group_attributes"
+            }
+          }
+        }
+      }
+    },
+    "user_group_patch_params": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "example": "10"
+            },
+            "type": {
+              "type": "string",
+              "example": "user_groups"
+            },
+            "attributes": {
+              "$ref": "#/definitions/user_group_attributes"
+            }
+          }
+        }
+      }
+    },
     "error_400": {
       "type": "object",
       "properties": {
@@ -1661,6 +2016,15 @@
       }
     },
     "error_422": {
+      "type": "object",
+      "properties": {
+        "error": {
+          "type": "string",
+          "example": "Invalid request"
+        }
+      }
+    },
+    "error_422_start_end_time": {
       "type": "object",
       "properties": {
         "errors": {
